--- a/yaapp/templates/yabase/app/footer.html
+++ b/yaapp/templates/yabase/app/footer.html
@@ -3,6 +3,7 @@
 <div class='container'>
     <footer>
         <div id="contacts" class="blocks">
+            {% ifnotequal app_name 'deezer' %}
             <p>
                 <a href="https://facebook.com/yasound" class="footer-text-color2" title="facebook" target='_blank'>
                     <img src="/media/app/images/facebook_logo.png" alt="facebook"/>
@@ -13,8 +14,10 @@
                     <span>Twitter</span>
                 </a>
             </p>
+            {% endifnotequal %}
             <p>
                 {% ifequal app_name 'deezer' %}
+                <br/>
                 <a id='btn-deezer-link-out' href="{% app_url webapp_default %}"
                     class="link-out"
                     target="_blank"
@@ -56,11 +59,14 @@
         <div class="footer-separation">
             <img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
         </div>
+
+        {% ifnotequal app_name 'deezer' %}
         <div id="minutes" class="blocks">
             <span class="footer-text-color1" >{{ minutes }}</span>
             <p class="footer-text-color2" >{% trans "minutes of music have been played" %}</p>
         </div>
     <p id="copyright">&copy; Yasound 2012</p>
+        {% endifnotequal %}
   <a href='#' id='scroll-top-container' style='display:none;'>
     <img src="/media/app/images/scroll-top.png">
   </a>
