--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -510,7 +510,11 @@ HTML, BODY { height: 100%; }
         <div class="container">
       <div id="brand-logo" >
 				<a href="{% app_url webapp app_name %}" id='btn-webapp'>
-					<img src="/media/app/images/yasound-logo.png" width="110" height="86" alt="Logo Yasound">
+          {% ifequal app_name 'deezer' %}
+          <img src="/media/images/logos/yasound-inline-grey.png" alt="Logo Yasound">
+          {% else %}
+          <img src="/media/app/images/yasound-logo.png" width="110" height="86" alt="Logo Yasound">
+          {% endifequal %}
 				</a>
 			</div>
       <div id="mobile-menu-logo">
