--- a/yaapp/templates/yabase/app/profile/user.mustache
+++ b/yaapp/templates/yabase/app/profile/user.mustache
@@ -25,7 +25,7 @@
     <button type="button" id='logout-btn' class="user-btn yabutton right"><a href='{% url logout %}'>{% trans "Logout" %}</a></button>
     <button type="button" id='settings-btn' class="user-btn yabutton right"><a href='{% app_url webapp_settings app_name %}'>{% trans "Settings" %}</a></button>
     <%/owner%>
-    <em class='hidden-phone'><%#followers_count%><% followers_count %> {% trans "followers" %}, <%/followers_count%><% agc %></em>
+    <em class='hidden-phone'><% agc %></em>
     <p class="profile-bio"><% bio_text %></p>
    </div>
 	<div class='separation-high'>
