fix for internet explorer

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -21,7 +21,7 @@
 
 <!--[if lt IE 9]>
     <script type="text/javascript"
-     src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+     src="https://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
 
     <style>
      .chromeFrameInstallDefaultStyle {
@@ -470,10 +470,10 @@ HTML, BODY { height: 100%; }
 
 <!--[if ! lt IE 9]>
 <script type="text/javascript">
-    document.getElementById('loading-message').innerHTML = "{% trans 'Yasound' %}";
+//    document.getElementById('loading-message').innerHTML = "{% trans 'Yasound' %}";
 
-    document.getElementById('loading-mask').style.removeProperty("display");
-    document.getElementById('loading').style.removeProperty("display");
+//    document.getElementById('loading-mask').style.removeProperty("display");
+//    document.getElementById('loading').style.removeProperty("display");
 </script>
 <![endif]-->
 
