fixed hd box displaying for anon users

--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -160,7 +160,7 @@
 
           <div id='hd-without-login'>
           <div id="hd-button" class='<%#hd%>hd-enabled<%/hd%><%^hd%>hd-disabled<%/hd%>'>
-             <div id='hd-box-container' class='hidden'>
+             <div id='hd-box-container' style='display:none;'>
               <div id='hd-status'>
                 <label for='hd-checkbox'>{% trans "HD" %}</label>
                   <div id="hd-checkbox-container">
