added new press release (20121025)

--- a/yaapp/templates/yabase/app/static/press.mustache
+++ b/yaapp/templates/yabase/app/static/press.mustache
@@ -48,6 +48,8 @@
                 <li><a href="{% url download 'media/yaweb/presse/releases/1_corpo.pdf' %}">{% trans "Corporate" %}</a></li>
                 <li><a href="{% url download 'media/yaweb/presse/releases/2_app_launch.pdf' %}">{% trans "Launch" %}</a></li>
                 <li><a href="{% url download 'media/yaweb/presse/releases/3_new_version_twitter.pdf' %}">{% trans "New version" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/releases/CPStrategieVF_121025.pdf' %}">{% trans "YaSound s’ouvre au Web et à l’international" %}</a>
+                 (<a href="{% url download 'media/yaweb/presse/releases/cp_121025.zip' %}">{% trans "screenshots" %}</a>) </li>
             </ul>
             <h3>{% trans "Press Reviews" %}</h3>
             <ul>
