--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -128,7 +128,13 @@
             <div id="hd-checkbox-container">
                 <input type='checkbox' id='hd-checkbox' {% if hd_enabled %}checked='checked'{% else %}disabled=""{% endif %}>
             </div>
+            <label for='hd-promocode'>{% trans "Enter a promo code:" %} </label>
         </div>
+        <div id='hd-promocode'>
+          <label for='promocode'>{% trans "Enter a promo code:" %} </label>
+          <input type='input' name='promcode'>
+        </div>
+
         <div id='gifts-container'>
             <ul id='gifts'>
                 <img class='loading-mask' src='/media/images/loading-black.gif'/>
@@ -167,6 +173,12 @@
                       <input type='checkbox' id='hd-checkbox' {% if hd_enabled %}checked='checked'{% else %}disabled=""{% endif %}>
                   </div>
               </div>
+
+              <div id='hd-promocode'>
+                <label for='promocode'>{% trans "Enter a promo code:" %} </label>
+                <input type='input' name='promcode'>
+              </div>
+
               <div id='gifts-container'>
                   <ul id='gifts'>
                       <img class='loading-mask' src='/media/images/loading-black.gif'/>
