updated press page

--- a/yaapp/templates/yabase/app/static/press.mustache
+++ b/yaapp/templates/yabase/app/static/press.mustache
@@ -45,19 +45,21 @@
             </table>
             <h3>{% trans "Press Releases" %}</h3>
             <ul>
-                <li><a href="{% url download 'media/yaweb/presse/releases/1_corpo.pdf' %}">{% trans "Corporate" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/releases/2_app_launch.pdf' %}">{% trans "Launch" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/releases/3_new_version_twitter.pdf' %}">{% trans "New version" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/releases/CPStrategieVF_121025.pdf' %}">{% trans "YaSound s’ouvre au Web et à l’international" %}</a>
-                 (<a href="{% url download 'media/yaweb/presse/releases/cp_121025.zip' %}">{% trans "screenshots" %}</a>) </li>
+                <li>{% trans "October 23, 2012" %} - <a href="{% url download 'media/yaweb/presse/releases/CPStrategieVF_121025.pdf' %}">{% trans "YaSound s’ouvre au Web et à l’international" %}</a>
+                 <br/><a class='gfx-pack' href="{% url download 'media/yaweb/presse/releases/cp_121025.zip' %}">{% trans "(+graphic pack)" %}</a>
+                </li>
+                <li>{% trans "April 23, 2012" %} - <a href="{% url download 'media/yaweb/presse/releases/3_new_version_twitter.pdf' %}">{% trans "New version" %}</a></li>
+                <li>{% trans "March 20, 2012" %} - <a href="{% url download 'media/yaweb/presse/releases/2_app_launch.pdf' %}">{% trans "Launch" %}</a></li>
+                <li>{% trans "March 13, 2012" %} - <a href="{% url download 'media/yaweb/presse/releases/1_corpo.pdf' %}">{% trans "Corporate" %}</a></li>
             </ul>
             <h3>{% trans "Press Reviews" %}</h3>
             <ul>
-                <li><a href="{% url download 'media/yaweb/presse/reviews/201203_review_press_fr.pdf' %}">{% trans "Press review (march 2012)" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/reviews/201203_review_blogs_fr.pdf' %}">{% trans "Weblogs review (march 2012)" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_press_fr.pdf' %}">{% trans "Press review (april 2012)" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_blogs_fr.pdf' %}">{% trans "Weblogs review (april 2012)" %}</a></li>
-                <li><a href="{% url download 'media/yaweb/presse/reviews/201205_review_press_blogs_fr.pdf' %}">{% trans "Press and weblogs review (may 2012)" %}</a></li>
+                <li>{% trans "June 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/Revuedepresse_Yasound0712.pdf' %}">{% trans "Press and weblogs review" %}</a></li>
+                <li>{% trans "May 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/201205_review_press_blogs_fr.pdf' %}">{% trans "Press and weblogs review" %}</a></li>
+                <li>{% trans "April 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/201204_review_blogs_fr.pdf' %}">{% trans "Weblogs review" %}</a></li>
+                <li>{% trans "April 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/201204_review_press_fr.pdf' %}">{% trans "Press review" %}</a></li>
+                <li>{% trans "March 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/201203_review_press_fr.pdf' %}">{% trans "Press review" %}</a></li>
+                <li>{% trans "March 2012" %} - <a href="{% url download 'media/yaweb/presse/reviews/201203_review_blogs_fr.pdf' %}">{% trans "Weblogs review" %}</a></li>
             </ul>
             <p>&nbsp;</p>
         </div>
