--- a/yaapp/templates/yabase/app/radio/radioInfos.mustache
+++ b/yaapp/templates/yabase/app/radio/radioInfos.mustache
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% if radio %}
 <h1>{{ radio.name }}</h1>
-<p>{{ radio.description }}</p>
+<p>{{ radio.description|urlize }}</p>
 {% else %}
 <h1><% fullname %></h1>
-<p><% description %></p>
+<p><%{description%></p>
 {% endif %}
