--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2168,6 +2168,10 @@ ul .user-cell {
     overflow: hidden;
 }
 
+ul .user-connected {
+    border:8px solid #5aabda;
+}
+
 ul .user-cell:hover {
 	border:8px solid #5aabda;
 	-webkit-transition: border 0.6s ease;
