updated about page

--- a/yaapp/templates/yabase/app/static/about.mustache
+++ b/yaapp/templates/yabase/app/static/about.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='row common-background' id='about'>
     <div class='span12 no-margin'>
-        <h1>{% trans "YaSound, the number one socials radios platform." %}</h1>
+        <h1>{% trans "YaSound, the number one socials radios platform" %}</h1>
         <div class='separation-line'></div>
     </div>
     <div class='span12 no-margin visible-desktop' id='header'>
@@ -48,7 +48,7 @@
             <h3>Video YaSound 2012</h3>
             <h4>FlashMob Paris</h4>
 
-            <iframe width="370" height="222" src="http://www.youtube.com/embed/XML4P45YAd4" frameborder="0" allowfullscreen></iframe>
+            <iframe width="370" height="222" src="https://www.youtube.com/embed/XML4P45YAd4" frameborder="0" allowfullscreen></iframe>
             </div>
 
     </div>
