--- a/yaapp/media/css/deezer.css
+++ b/yaapp/media/css/deezer.css
@@ -93,6 +93,10 @@
 }
 
 
+#footer {
+  display: none;
+}
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
     #player #metadata-container {
