--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -551,7 +551,7 @@ HTML, BODY { height: 100%; }
     <div class="modal-body">
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+        <a href="#" class="btn btn-primary" data-dismiss="modal">{% trans "Close" %}</a>
     </div>
 </div>
 
