--- a/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
@@ -14,7 +14,7 @@
     </div>
 
     <div id='deezer-tracks-container' style='display:none;'>
-        <button class='yabutton-small' id='import-all'>{% trans "Import all" %}</button>
+        <button class='action-btn' id='import-all'>{% trans "Import all" %}</button>
         <table class="table table-bordered">
             <thead>
                 <tr>
