--- a/yaapp/templates/yabase/app/programming/songInstances.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstances.mustache
@@ -2,8 +2,8 @@
 <div id='programming-filters'></div>
 <div id='playlist-actions'>
     {% ifequal app_name 'deezer' %}
+    <button class='action-btn' id='export-deezer-all'>{% trans "Export all to Deezer" %}</button>
     <button class='yabutton-small' id='export-deezer'>{% trans "Export selection to Deezer" %}</button>
-    <button class='yabutton-small' id='export-deezer-all'>{% trans "Export all to Deezer" %}</button>
 
     <div id='progress' class="progress progress-striped active" style="display:none;">
       <div class="bar" style="width: 0%"></div>
