--- a/yaapp/templates/yabase/app/radioCell.html
+++ b/yaapp/templates/yabase/app/radioCell.html
@@ -6,7 +6,8 @@
     </div>
     <div class="radio-container">
         <div class='picture'>
-        <a href='{% app_url webapp_radio app_name radio.uuid %}'><img src='{{ radio.picture_url }}' width='210' height='210'/></a>
+        <a href='{% app_url webapp_radio app_name radio.uuid %}'>
+            <img src='/media/images/radio-loading.gif' width='210' height='210'/></a>
         </div>
 
         <div class='mask' style='display:none;'>
@@ -25,7 +26,7 @@
         </div>
 
         <div class="profile">
-            <img src='{{ radio.creator.userprofile.picture_url }}' width='32px' height='32px'/>
+            <img src='' width='32px' height='32px'/>
             <span class="radio-profile-picture-mask">
                 <img src="/media/app/images/radio/radio-profile-picture-mask.png" width="28" height="28" alt="Radio Profile Picture Mask"/>
             </span>
