added deezer css

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -105,6 +105,7 @@ HTML, BODY { height: 100%; }
     {% endcompress %}
 
     {% ifequal app_name 'deezer' %}
+    <link rel="stylesheet" href="https://cdns-files.deezer.com/css/dz.css"/>
     <link rel="stylesheet" href="/media/css/deezer.css"/>
     {% endifequal %}
 
