deezer: improved css for add to xx buttons, added "add to my music"

--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -12,5 +12,8 @@
    		</div>
    </div>
    {% ifequal app_name 'deezer' %}
-   <a class="dz-addtoplaylist" dz-id="0" style='display:none;'></a>
+   <div class='deezer-actions'>
+   <a class="dz-addtoplaylist" dz-id="0" style='display:none;'></a><br/>
+   <a class="dz-library" dz-id="0" dz-type="album" style='display:none;'></a>
+   </div>
    {% endifequal %}
