--- a/yaapp/media/css/deezer.css
+++ b/yaapp/media/css/deezer.css
@@ -194,6 +194,10 @@
   text-shadow:0 1px #386b92;
 }
 
+.deezer-actions {
+  margin-left: 45px;
+}
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
     #player #metadata-container {
