deezer: added br to separate action buttons

--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -13,8 +13,8 @@
    </div>
    {% ifequal app_name 'deezer' %}
    <div class='deezer-actions'>
-   <a class="dz-addtoplaylist" dz-id="0" style='display:none;'></a><br/>
-   <a class="dz-share" dz-id="0" dz-type="artist" style='display:none;'></a>
+   <a class="dz-addtoplaylist" dz-id="0" style='display:none;'></a><br/><br/>
+   <a class="dz-share" dz-id="0" dz-type="artist" style='display:none;'></a><br/><br/>
    <a class="dz-library" dz-id="0" dz-type="album" style='display:none;'></a>
    </div>
    {% endifequal %}
