improved share box
* bigger preview box
* options for widget (auto play, large widget)

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -30,7 +30,6 @@ body {
     padding-left:116px;
 }
 .share {
-    float: left;
     margin-right: 12px;
     margin-top: 2px;
 }
@@ -1096,8 +1095,13 @@ input::-webkit-input-placeholder {
     -o-box-shadow:none;
 }
 
+#modal-share .modal-body {
+    max-height: 400px;
+}
+
 #modal-share ul {
     margin-left: 0;
+    margin-top:16px;
     list-style:none;
     width:100%;
 }
@@ -1118,11 +1122,26 @@ input::-webkit-input-placeholder {
 
 #modal-share #widget {
     width:100%;
-    height:100%;
+    height:55px;
+    font-size: 14px;
+    font-family: Consolas, "Liberation Mono", Courier, monospace;
 }
 
 #modal-share #stream {
     width:100%;
+    font-size: 14px;
+    font-family: Consolas, "Liberation Mono", Courier, monospace;
+}
+
+#modal-share .checkbox.inline {
+    width: 120px;
+    margin-top:0;
+    margin-bottom:8px;
+}
+
+#modal-share .label-title {
+    font-size:14px;
+    font-weight: bold;
 }
 
 /*--- LOADER IMAGE ---*/
