--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -248,6 +248,9 @@ HTML, BODY { height: 100%; }
        {% if email_referal %}
        var g_email_referal = '{{ email_referal|safe }}';
        {% endif %}
+
+       var g_language_code = '{{request.LANGUAGE_CODE}}';
+
     </script>
 
 
