--- a/yaapp/templates/yabase/app/track_deezer.mustache
+++ b/yaapp/templates/yabase/app/track_deezer.mustache
@@ -88,9 +88,12 @@
           </div>
             </div>
 
+
         </div>
 
             {% endif %}
+            <a id='btn-deezer-link-out' href="{% app_url webapp_default %}" class="link-out" target="_blank" title="{% trans 'Go to YaSound website' %}">{% trans 'Home' %}</a>
+
         </div>
     </div>
 
