wall message: the user picture is clickable

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2377,6 +2377,7 @@ ul .user-cell:hover .caption {
     height:50px;
     margin:13px 21px;
     overflow:hidden;
+    cursor: pointer;
 }
 
 #wall-event-messages {
